<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">\&apos;Peak\&apos;a\&apos;Boo\&apos;</string> -->
    <string name="app_name">Peak\&apos;a\&apos;Boo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register_activity">Register_activity</string>
    <string name="title_activity_feed_detail">FeedDetail</string>
    <string name="title_activity_surprise_fullscreen">SurpriseFullscreen</string>
    <string name="title_activity_shake">ShakeActivity</string>
    <string name="lbl_username">Your Username</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_upload_profile_photo">Upload Profile Photo</string>
    <string name="lbl_peak_a_boo">Peak\&apos;a\&apos;Boo</string>
    <string name="GPSDISABLED"> Location Providers are disabled in your device. To enable the Location Providers from the Settings click "OK"</string>
    <string name="lbl_forget_password">Forget Something? <b>Reset your password.</b></string>
    <string name="lbl_dice_roll">Dice Roll</string>

    <color name="orange1">#EE7836</color>
    <color name="green1">#56C4C3</color>

    <string name="lbl_my_account">My Account</string>
    <string name="lbl_find_friends_link_accounts">Find Friends-Link Accounts</string>
    <string name="lbl_preferences">Preferences</string>
    <string name="lbl_privacy">Privacy</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_messages">Messages</string>
    <string name="title_activity_tag_list">TagList</string>
    <string name="applicationId">380615018626574</string>

</resources>