<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context=".Register_activity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2f2f2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/reg_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left|center"
            android:paddingLeft="5dp"
            android:src="@drawable/arrow" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/lbl_peak_a_boo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/font_color" />

        <ImageView
            android:id="@+id/reg_iv_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="5dp"
            android:visibility="gone"
            android:src="@drawable/slideshowarrow" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/imagemaskframe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" >

        <ImageView
            android:id="@+id/reg_iv_upload"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/regis_cam" />

<!--         <ImageView -->
<!--             android:id="@+id/imageView2" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_gravity="center" -->
<!--             android:adjustViewBounds="true" -->
<!--             android:padding="25dp" -->
<!--             android:scaleType="fitXY" -->
<!--             android:src="@drawable/regis_cam" /> -->
    </FrameLayout>

    <!-- <ImageView -->
    <!-- android:id="@+id/reg_iv_upload" -->
    <!-- android:layout_width="100dp" -->
    <!-- android:layout_height="100dp" -->
    <!-- android:layout_gravity="center" -->
    <!-- android:layout_marginTop="25dp" -->
    <!-- android:src="@drawable/regis_cam" /> -->

    <TextView
        android:id="@+id/reg_upload_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/lbl_upload_profile_photo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/font_color" />

    <LinearLayout
        android:id="@+id/lldiem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/reg_uname_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <ImageView
                android:id="@+id/reg_iv_uname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:scaleType="center"
                android:src="@drawable/username" />

            <EditText
                android:id="@+id/reg_et_uname"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/coustom_editext"
                android:ems="10"
                android:hint="@string/lbl_username"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/font_color" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reg_email_layt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <ImageView
                android:id="@+id/reg_iv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:scaleType="center"
                android:src="@drawable/login_email" />

            <EditText
                android:id="@+id/reg_et_email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/coustom_editext"
                android:ems="10"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/font_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reg_pass_layt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <ImageView
                android:id="@+id/reg_iv_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:scaleType="center"
                android:src="@drawable/login_password" />

            <EditText
                android:id="@+id/reg_et_pass"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/coustom_editext"
                android:ems="10"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/font_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reg_phn_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" >

            <ImageView
                android:id="@+id/reg_iv_phn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonbg"
                android:scaleType="center"
                android:src="@drawable/mobilenumber" />

            <EditText
                android:id="@+id/reg_et_phn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/coustom_editext"
                android:ems="10"
                android:hint="@string/lbl_mobile_number"
                android:inputType="number|numberDecimal"
                android:maxEms="10"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textColorHint="@color/font_color" />
        </LinearLayout>
        
        <Button
            android:id="@+id/reg_iv_next1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bbutton"
            android:layout_marginTop="10dp"
            android:paddingRight="5dp"
            android:textSize="20sp"
            android:text="Next" />

    </LinearLayout>

</LinearLayout>